# test-oidc

./: Cargo.toml  config.json
frontend/: index.html  redirect.html  redirect.js
src/: main.rs
