[package]
name = "test-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
base64 = "0.21.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
