[package]
name = "test-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
alcoholic_jwt = "4091.0.0"
config = "0.14.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
